--- a/contents/ui/voodoo/style.css
+++ b/contents/ui/voodoo/style.css
@@ -68,6 +68,7 @@ a:hover {color: #cd98ff;}
 .global-text a, .entry p a, #commentform>p a {color: #633f1d;}
 .global-text a:hover, .entry p a:hover, #commentform>p a:hover {color: #cd98ff;}
 .global_nav_active {box-shadow: 0 2px 0 0 #492f17;}
+.fit-vids-style {display: none;}
 @font-face {font-family: "DiavloMedium";src: url("fonts/diavlo/diavlo_medium_ii_37-webfont.eot");src: url("fonts/diavlo/diavlo_medium_ii_37-webfont.eot?#iefix") format("embedded-opentype"),url("fonts/diavlo/diavlo_medium_ii_37-webfont.woff") format("woff"),url("fonts/diavlo/diavlo_medium_ii_37-webfont.ttf") format("truetype"),url("fonts/diavlo/diavlo_medium_ii_37-webfont.svg#DiavloMedium") format("svg");font-weight: normal;font-style: normal;}
 @font-face {font-family: "FontinBold";src: url("fonts/fontin/fontin-bold-webfont.eot");src: url("fonts/fontin/fontin-bold-webfont.eot?#iefix") format("embedded-opentype"),url("fonts/fontin/fontin-bold-webfont.woff") format("woff"),url("fonts/fontin/fontin-bold-webfont.ttf") format("truetype"),url("fonts/fontin/fontin-bold-webfont.svg#FontinBold") format("svg");font-weight: normal;font-style: normal;}
 @font-face {font-family: "FontinRegular";src: url("fonts/fontin/fontin-regular-webfont.eot");src: url("fonts/fontin/fontin-regular-webfont.eot?#iefix") format("embedded-opentype"),url("fonts/fontin/fontin-regular-webfont.woff") format("woff"),url("fonts/fontin/fontin-regular-webfont.ttf") format("truetype"),url("fonts/fontin/fontin-regular-webfont.svg#FontinRegular") format("svg");font-weight: normal;font-style: normal;}
